# TelanganaDataViz

./: .replit  app.py  pyproject.toml  replit.md
attached_assets/: telangana_districts_1752210089265.geojson
data/: telangana_districts.geojson
utils/: auth.py  chart_utils.py  data_processor.py  map_utils.py
