[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-levenshtein>=0.27.1",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.1",
    "numpy>=2.3.1",
    "fuzzywuzzy>=0.18.0",
    "shapely>=2.1.1",
]
